fix(overlay): toggle overflow, padding to carousel

--- a/src/carousel/Carousel.css
+++ b/src/carousel/Carousel.css
@@ -1,5 +1,5 @@
 .carousel-root {
-    padding: 1em 1em 0 1em;
+    padding: 1em 0;
 	width: 100%;
     align-self: center;
     height: 100%;
@@ -37,6 +37,7 @@
 @media (min-device-width: 450px) and (max-device-width: 750px) {
     .carousel-root {
         /* padding: 0 0 0 2em; */
+        padding: 1em 0;
         grid-column: 1/3;
         align-items: center;
     }
@@ -44,6 +45,7 @@
 
 @media (min-width: 750px) {
     .carousel-root {
+        padding: 3em 0;
         grid-column: 1/3;
         align-items: center;
     }
